# Fractal_Coloring_Parallelization

./: README.md
results/: RGB_palette.ppm  RGB_points.txt  RGB_points_1.txt  RGB_points_2.txt  fractal_960x540_1024.ppm  test_img.ppm
source/: CMakeLists.txt  colour_palette.txt  init.txt  init_params.txt  main.cpp  mpi.cpp  mpi_openmp.cpp  openmp_v1.cpp  openmp_v2.cpp  plot_RGBspace.p  secuential.cpp
source/colour_palette/: colour_palette_2.txt
source/headers/: CMakeLists.txt  colour_palette.cpp  colour_palette.h  image.cpp  rgb.cpp  rgb.h
src/test/: CMakeLists.txt  image.cpp  image.h  main  test.cpp  trash.cpp  trash_cmake.txt
src/test/source/: CMakeLists.txt  TestConfig.h.in
test/source/: test.cpp
test/source/headers/: CMakeLists.txt  rgb.h
